[tool.poetry]
name = "librelingo_json_export"
version = "0.7.1"
description = "Export LibreLingo courses in the JSON format used by the web app"
authors = ["Dániel Kántor <git@daniel-kantor.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
# librelingo-types = {path = "./librelingo_types-3.1.0-py3-none-any.whl"}
# librelingo-utils = {path = "./librelingo_utils-2.5.0-py3-none-any.whl"}
python-slugify = ">=4.0.1"
# librelingo-yaml-loader = {path = "./librelingo_yaml_loader-1.6.0-py3-none-any.whl"}
pylev = "^1.4"
# editdistance = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
pyfakefs = "^4.3.3"
librelingo-fakes = {path = "../librelingo_fakes", develop = true}
pytest-mock = "^3.5.1"
pydoc-markdown = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
